# Amarelo-Subs

./: .gitignore  build_deb.sh  main.py  pyproject.toml  requirements.txt
src/core/: subtitle_generator.py  subtitle_syncer.py  subtitle_translator.py  video_merger.py  workflow_manager.py
src/gui/: main_window.py
src/utils/: config_manager.py  dependency_installer.py  download_manager.py  ffmpeg_installer.py
